--- a/public/index.html
+++ b/public/index.html
@@ -42,7 +42,7 @@
         .form-control {
             width: 100%; max-width: 200px; padding: 4px 6px; border: 1px solid var(--border); border-radius: 5px;
             font-size: 0.75rem; background: var(--transparent-bg); transition: all 0.2s; height: 26px;
-            text-align: left;
+            text-align: left; /* محاذاة النصوص من اليسار */
         }
         .form-control:focus { border-color: var(--accent); box-shadow: 0 0 6px rgba(232, 185, 35, 0.3); transform: scale(1.01); outline: none; }
         .form-control:invalid:focus { border-color: var(--danger); box-shadow: 0 0 6px rgba(199, 86, 86, 0.3); }
@@ -61,21 +61,19 @@
             background: var(--transparent-bg); padding: 6px; border-radius: 5px; margin-bottom: 5px; cursor: pointer;
             display: flex; justify-content: space-between; align-items: center; border: 1px solid var(--border); transition: all 0.2s;
         }
-        .toggle-section:hover { background: rgba(255, 245, 235, 0.98); }
-        .map-toggle { background: block; padding: 10px; font-size: 0.95; font-weight: 600; }
-        .map-toggle:hover { background: linear-gradient(135deg, #8BAF7F); border-radius: 6px; transform: translateY(-2px); }
-        .map-toggle { background: linear-gradient(135deg, var(--highlight), #8BAF7F); padding: 10px; font-size: 0.0rem; font-weight: 600; border-radius: 6px; box-shadow: 0 3px 10px rgba(168, 196, 162, 0.3); color: #FFFFFF; }
+        .toggle-section:hover { background: rgba(255, 245, 235, 0.98); transform: translateY(-1px); }
+        .map-toggle { background: linear-gradient(135deg, var(--highlight), #8BAF7F); padding: 10px; font-size: 0.95rem; font-weight: 600; border-radius: 6px; box-shadow: 0 3px 10px rgba(168, 196, 162, 0.3); color: #FFFFFF; }
         .map-toggle:hover { background: linear-gradient(135deg, #8BAF7F, var(--highlight)); transform: translateY(-2px); }
         .toggle-content { padding: 6px; background: var(--transparent-bg); border-radius: 5px; margin-top: 4px; border: 1px solid var(--border); animation: fadeIn 0.3s; }
-    .checkbox-group { display: flex; align-items: center; gap: 0.4px; margin-bottom: 5px; }
+        .checkbox-group { display: flex; align-items: center; gap: 4px; margin-bottom: 5px; }
         .checkbox-group input { width: 12px; height: 12px; accent-color: var(--primary); }
-        .result-container { margin-top: 10px; padding: 10px; background: linear-gradient(135deg, var(--primary), #7A5A45); border-radius: 6px; box-shadow: 0 5px 15px rgba(0, 0, 0, 0.08); color: #FFFFFF; display: none; animation: slideIn 0.25s; }
+        .result-container { margin-top: 10px; padding: 10px; background: linear-gradient(135deg, var(--primary), #7A5A45); border-radius: 6px; box-shadow: 0 5px 15px rgba(0, 0, 0, 0.08); color: #FFFFFF; display: none; animation: slideIn 0.3s; }
         .result-header { display: flex; justify-content: space-between; align-items: center; margin-bottom: 6px; padding-bottom: 5px; border-bottom: 1px solid rgba(255, 255, 255, 0.2); }
         .result-header h3 { font-size: 1rem; display: flex; align-items: center; gap: 4px; }
         .result-content table { width: 100%; border-collapse: collapse; font-size: 0.75rem; }
         .result-content th, .result-content td { padding: 6px; text-align: right; border-bottom: 1px solid rgba(255, 255, 255, 0.2); }
         .result-content th { background: rgba(255, 255, 255, 0.1); color: #FFFFFF; }
-        .error-message { color: var(--danger); font-size: 0.6rem; margin-top: 2px; display: none; }
+        .error-message { color: var(--danger); font-size: 0.6rem; margin-top: 2px; display: none; animation: fadeIn 0.2s; }
         .tooltip { position: absolute; background: var(--primary); color: #FFFFFF; padding: 2px 5px; border-radius: 4px; font-size: 0.6rem; top: -22px; right: 5px; opacity: 0; transition: opacity 0.2s; pointer-events: none; }
         .form-group:hover .tooltip { opacity: 1; }
         @keyframes fadeIn { from { opacity: 0; transform: translateY(3px); } to { opacity: 1; transform: translateY(0); } }
@@ -95,7 +93,7 @@
             <select id="languageSelect" class="form-control"><option value="ar">العربية</option></select>
         </div>
         <div class="disclaimer">
-            <h2><span class="material-icons-outlined">warning</span> تنبيأ قانوني</h2>
+            <h2><span class="material-icons-outlined">warning</span> تنبيه قانوني</h2>
             <p>هذه الأداة مخصصة للأفراد في العراق فقط. يحظر استخدامها من قبل الشركات بدون تصريح. سيتم اتخاذ إجراءات قانونية ضد الاستخدام غير المرخص. الأداة مشفرة لحماية خوارزمياتها.</p>
         </div>
         <div class="form-card">
@@ -109,7 +107,7 @@
                     <div class="form-row">
                         <div class="form-group">
                             <label for="customerName">الاسم الكامل</label>
-                            <input type="customerName" class="form-control" required>
+                            <input type="text" id="customerName" class="form-control" required>
                             <div class="error-message" id="customerNameError">الرجاء إدخال الاسم</div>
                             <span class="tooltip">أدخل الاسم الكامل</span>
                         </div>
@@ -190,7 +188,7 @@
                             <span class="tooltip">أدخل ارتفاع الطابق الأرضي</span>
                         </div>
                         <div class="form-group">
-                            <label for="otherFloorsHeight">ارتفاع باقي الطوابق (م)</label>
+                            <label for="otherFloorsHeight">ارتفاع باقي الطوابيق (م)</label>
                             <input type="number" id="otherFloorsHeight" class="form-control" required step="0.01">
                             <div class="error-message" id="otherFloorsHeightError">الرجاء إدخال ارتفاع</div>
                             <span class="tooltip">أدخل ارتفاع باقي الطوابق</span>
@@ -231,8 +229,8 @@
                                 <span class="tooltip">أدخل ارتفاع البلوكة</span>
                             </div>
                             <div class="form-group">
-                                <label for="brickWeight">وزن البلوكة (كجم/م³)</label>
-                                <input type="number" id="brickWeight" class="form-control" step="0.01">
+                                <label for="brickDensity">وزن البلوكة (كغم/م³)</label>
+                                <input type="number" id="brickDensity" class="form-control" step="0.01">
                                 <span class="tooltip">أدخل وزن البلوكة</span>
                             </div>
                         </div>
@@ -449,17 +447,10 @@
                                 <span class="tooltip">أدخل مساحة الجدران</span>
                             </div>
                         </div>
-                        <div class="form-row">
-                            <div class="form-group">
-                                <label for="claddingWallsArea">مساحة الجدران التغليف (م²)</label>
-                                <input type="number" id="claddingWallsArea" class="form-control" step="0.01">
-                                <span class="tooltip">أدخل مساحة الجدران</span>
-                            </div>
-                            <div class="form-group">
-                                <label for="plasterWallsArea">مساحة لبخ الجدران (م²)</label>
-                                <input type="number" id="plasterWallsArea" class="form-control" step="0.01">
-                                <span class="tooltip">أدخل مساحة لبخ الجدران</span>
-                            </div>
+                        <div class="form-group">
+                            <label for="claddingWallsArea">مساحة الجدران التغليف (م²)</label>
+                            <input type="number" id="claddingWallsArea" class="form-control" step="0.01">
+                            <span class="tooltip">أدخل مساحة الجدران</span>
                         </div>
                         <div class="toggle-section" id="toggleStairsRailing">
                             <span><span class="material-icons-outlined">stairs</span> محجر الدرج</span>
@@ -512,7 +503,7 @@
                 </div>
                 <div class="form-row">
                     <div class="form-group">
-                        <button type="submit" class="btn btn-primary btn-block"><span class="material-icons-outlined">حساب التكلفة</span></button>
+                        <button type="submit" class="btn btn-primary btn-block"><span class="material-icons-outlined">calculate</span> حساب التكلفة</button>
                     </div>
                     <div class="form-group">
                         <button type="reset" class="btn btn-reset btn-block"><span class="material-icons-outlined">delete</span> إعادة تعيين</button>
@@ -538,24 +529,18 @@
             { toggle: 'toggleInternalWalls', content: 'internalWallsInfo' }
         ];
         toggles.forEach(({ toggle, content }) => {
-            const t = document.getElementById(toggle);
-            const c = document.getElementById(content);
-            if (t || !c) return;
-            t.addEventListener('click', () => {
+            const t = document.getElementById(toggle), c = document.getElementById(content);
+            if (t && c) t.addEventListener('click', () => {
                 c.classList.toggle('hidden');
-                t.querySelector('.toggle-icon').textContent = c.classList.contains('hidden') ? 'add' : 'remove';
+                t.querySelector('.toggle-icon span').textContent = c.classList.contains('hidden') ? 'add' : 'remove';
             });
         });
 
         const toggleSelect = (selectId, contentId, triggerValue) => {
-            const select = document.getElementById(selectId);
-            const content = document.getElementById(contentId);
-            if (select && content) {
-                select.addEventListener('change', () => {
-                    content.classList.toggle('hidden', select.value !== triggerValue);
-                });
-            }
-        toggleSelect(document.getElementById('brickType'), 'otherBrickInfo', 'other');
+            const select = document.getElementById(selectId), content = document.getElementById(contentId);
+            if (select && content) select.addEventListener('change', () => content.classList.toggle('hidden', select.value !== triggerValue));
+        };
+        toggleSelect('brickType', 'otherBrickInfo', 'other');
         toggleSelect('facadeType', 'customFacadeInfo', 'custom');
 
         document.querySelectorAll('.form-control[required]').forEach(input => {
@@ -564,6 +549,8 @@
                 if (err) err.style.display = input.validity.valid ? 'none' : 'block';
                 input.style.borderColor = input.validity.valid ? '' : 'var(--danger)';
             });
+        });
+
         document.getElementById('buildingForm').addEventListener('submit', async e => {
             e.preventDefault();
             const submitBtn = e.target.querySelector('button[type="submit"]');
@@ -574,7 +561,7 @@
                 const el = document.getElementById(id);
                 if (!el) return isInt ? 0 : isFloat ? 0 : '';
                 let val = el.value.replace(/,/g, '');
-                return isFloat ? parseFloat(val) || 0 : isInt(val) || 0 : val;
+                return isFloat ? parseFloat(val) || 0 : isInt ? parseInt(val) || 0 : val;
             };
 
             try {
@@ -583,25 +570,17 @@
                     location: { governorate: getValue('governorate'), area: getValue('area') },
                     land: { area: getValue('landArea', true), facadeWidth: getValue('facadeWidth', true) },
                     building: {
-                        floors: getValue('floors', false, true),
-                        rooms: getValue('rooms', false, true),
-                        bathrooms: getValue('bathrooms', false, true),
-                        groundFloorHeight: getValue('groundFloorHeight', true),
-                        otherFloorsHeight: getValue('otherFloorsHeight', true),
-                        brickType: getValue('brickType'),
-                        woodType: getValue('woodType'),
-                        facadeType: getValue('facadeType'),
-                        hasGarden: document.getElementById('hasGarden').checked,
-                        hasPool: document.getElementById('hasPool').checked,
-                        hasHVAC: document.getElementById('hasHVAC').checked,
-                        hasElevator: document.getElementById('hasElevator').checked,
+                        floors: getValue('floors', false, true), rooms: getValue('rooms', false, true),
+                        bathrooms: getValue('bathrooms', false, true), groundFloorHeight: getValue('groundFloorHeight', true),
+                        otherFloorsHeight: getValue('otherFloorsHeight', true), brickType: getValue('brickType'),
+                        woodType: getValue('woodType'), facadeType: getValue('facadeType'),
+                        hasGarden: document.getElementById('hasGarden').checked, hasPool: document.getElementById('hasPool').checked,
+                        hasHVAC: document.getElementById('hasHVAC').checked, hasElevator: document.getElementById('hasElevator').checked,
                         hasFence: document.getElementById('hasFence').checked
                     },
                     prices: {
-                        flooring: getValue('flooringPrice', true),
-                        wallInstallation: getValue('wallInstallationPrice', true),
-                        wallPainting: getValue('wallPaintingPrice', true),
-                        windowsDoors: getValue('windowsDoorsPrice', true)
+                        flooring: getValue('flooringPrice', true), wallInstallation: getValue('wallInstallationPrice', true),
+                        wallPainting: getValue('wallPaintingPrice', true), windowsDoors: getValue('windowsDoorsPrice', true)
                     },
                     hasMap: !document.getElementById('mapDetailsInfo').classList.contains('hidden'),
                     otherBrickInfo: !document.getElementById('otherBrickInfo').classList.contains('hidden'),
@@ -613,11 +592,12 @@
                     internalWallsInfo: document.getElementById('mapDetailsInfo').classList.contains('hidden') ? false : !document.getElementById('internalWallsInfo').classList.contains('hidden')
                 };
 
+                // إضافة الحقول فقط إذا كان القسم ظاهرًا
                 if (inputs.otherBrickInfo) {
                     inputs.building.brickWidth = getValue('brickWidth', true);
                     inputs.building.brickLength = getValue('brickLength', true);
                     inputs.building.brickHeight = getValue('brickHeight', true);
-                    inputs.building.brickWeight = getValue('brickWeight', true);
+                    inputs.building.brickDensity = getValue('brickDensity', true);
                 }
 
                 if (inputs.customFacadeInfo) {
@@ -659,7 +639,6 @@
                     inputs.technicalDetails.secondaryCeilingsArea = getValue('secondaryCeilingsArea', true);
                     inputs.technicalDetails.decorativeWallsArea = getValue('decorativeWallsArea', true);
                     inputs.technicalDetails.claddingWallsArea = getValue('claddingWallsArea', true);
-                    inputs.technicalDetails.plasterWallsArea = getValue('plasterWallsArea', true);
 
                     if (inputs.concreteColumnsInfo) {
                         inputs.technicalDetails.concreteVolume = getValue('concreteVolume', true);
@@ -685,42 +664,41 @@
                         <table>
                             <tr><th>البيان</th><th>القيمة</th></tr>
                             <tr><td>الرسالة</td><td>${result.result.message}</td></tr>
-                            <tr><td>البيانات المدخلة</td><td><pre>${JSON.stringify(result.result.inputData}, null, 2)}</pre></span></tr>
+                            <tr><td>البيانات المدخلة</td><td><pre>${JSON.stringify(result.result.inputData, null, 2)}</pre></td></tr>
                         </table>
                     </div>
                 `;
                 resultContainer.style.display = 'block';
 
-                document.getElementById('downloadPdf').addEventListener('click', () => {
+                document.getElementById('downloadPdf').onclick = () => {
                     const pdfContent = document.getElementById('pdfContent').innerHTML;
                     const pdfWindow = window.open('');
                     pdfWindow.document.write(`
                         <html dir="rtl">
                         <head><title>تقرير تكاليف البناء</title>
-                        <style>
-                            body { font-family: 'Tajawal', sans-serif; padding: 8px; }
-                            h3 { color: #5C4033; font-size: 1rem; }
-                            table { width: 100%; border-collapse: collapse; font-size: 0.75rem; margin-bottom: 6px; }
-                            th, td { padding: 6px; text-align: right; border-bottom: 1px solid #E4E2DB; margin-top: 2px; }
-                            th { background: rgba(255, 245, 235, 0.1); }
-                            pre { white-space: pre-wrap; }
-                        </style>
-                    </head>
-                    <body div>${pdfContent}</div>
-                    </html>
-                `);
-                pdfWindow.document.close();
-                pdfWindow.print();
-            });
-        } catch (error) {
-            document.getElementById('resultContent').innerHTML = `<p style="color: #C75656;">خطأ: ${error.message}</p>`;
-            document.getElementById('resultContainer').style.display = 'block';
-        } finally {
-            submitBtn.innerHTML = '<span class="material-icons-outlined">calculate</span> حساب التكلفة</span>';
-            submitBtn.disabled = false;
-        }
-    });
+                            <style>
+                                body { font-family: 'Tajawal', sans-serif; padding: 10px; background: #F5F1E9; color: #2A2A2A; }
+                                h3 { color: #5C4033; font-size: 1rem; }
+                                table { width: 100%; border-collapse: collapse; font-size: 0.75rem; }
+                                th, td { padding: 6px; text-align: right; border-bottom: 1px solid #E4E2DB; }
+                                th { background: rgba(92, 64, 51, 0.1); color: #5C4033; }
+                                pre { white-space: pre-wrap; background: rgba(255, 245, 235, 0.95); padding: 6px; border-radius: 5px; }
+                            </style>
+                        </head>
+                        <body>${pdfContent}</body>
+                        </html>
+                    `);
+                    pdfWindow.document.close();
+                    pdfWindow.print();
+                };
+            } catch (error) {
+                document.getElementById('resultContent').innerHTML = `<p style="color: #C75656;">خطأ: ${error.message}</p>`;
+                document.getElementById('resultContainer').style.display = 'block';
+            } finally {
+                submitBtn.innerHTML = '<span class="material-icons-outlined">calculate</span> حساب التكلفة';
+                submitBtn.disabled = false;
+            }
+        });
     </script>
 </body>
 </html>
-
